added pagination to findAll